style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background-color: #9cc1bb;
  color: #39483c;
  font-family: "Amatic SC", sans-serif;
  font-size: 2em;
  text-align: center;
  background-image: url(img/orb.png);
  background-repeat: no-repeat;
}
canvas {
  max-width: 100%;
  max-height: 100%;
}
.theHeader {
  margin: auto;
  color: #ffffff;
  font-size: 5rem;
  font-family: "Amatic SC", sans-serif;
  position: relative;
}
.newGame,
.instructionsBtn,
.backBtn,
.settingsBtn,
.restartBtn,
.soundBtn {
  text-align: center;
  vertical-align: middle;
  border: 2px solid #39483c;
  border-radius: 7px;
  background-color: #638b7e;
  color: #1d251f;
  font-size: 2rem;
  font-family: "Amatic SC", sans-serif;
  width: 160px;
  margin: 5px auto;
}
.newGame:hover {
  background-color: #9cc1bb;
}
.instructionsBtn:hover {
  background-color: #9cc1bb;
}
.settingsBtn:hover {
  background-color: #9cc1bb;
}
.backBtn:hover {
  background-color: #9cc1bb;
}
.soundBtn:active {
  background: pink;
}
.instructions {
  margin: auto;
  color: #39483c;
  font-size: 1.5rem;
  font-family: "Amatic SC", sans-serif;
  background-color: inherit;
}
.gameOverMenu{
  color: white;
  font-size: 2rem;
  font-family: "Amatic SC", sans-serif;
  display: none;
}
.startMenu {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: 100%;
  max-height: 100%;
  color: white;
  font-size: 2rem;
  font-family: "Amatic SC", sans-serif;
  display: none;
}
.flex-container4 {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  position:relative;
  padding-top: 25px;
  padding-bottom: 25px;
  top: 5%;
  left: 5%;
  transform: translate(-5%, 5%);
}
.playPauseBtn {
  background: url(music/pause.png) no-repeat;
  width: 25px;
  height: 25px;
}
.highScoreBtn {
  background: url(music/highscore.png) no-repeat;
  width: 25px;
  height: 25px;
}
.mainMenuBtn {
  background: url(music/home.png) no-repeat;
  width: 25px;
  height: 25px;
}
p{
  color: #ffffff;
}
.settingsHeader {
  margin: auto;
  color: #39483c;
  font-size: 3rem;
  font-family: "Amatic SC", sans-serif;
  position: relative;
}
.flex-container2 {
  padding: 20px;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
}
#highScore {
  position: absolute;
  top: 10%;
  right: 2%;
  display: flex;
  flex-flow: column wrap;
  color: #ffffff;
  font-size: 1.5rem;
  font-family: "Amatic SC", sans-serif;
  display: none;
}
#box {
  width: 100px;
  height: 300px;
  border: 2px solid white;
}

